--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "buefy": "^0.8.20",
     "core-js": "^3.6.5",
     "sass-loader": "^8.0.2",
+    "uuid": "^8.3.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
